--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -954,7 +954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -963,15 +963,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " int marks[][]={{50,60,55,67,70},{62,65,70,70,81},{72,66,77,80,69}};\r\n",
-      "|  Replaced variable marks of type int[][] with initial value [[I@79be0360\r\n",
-      "|    Update overwrote variable marks\r\n",
+      " int[][] marks={{50,60,55,67,70},{62,65,70,70,81},{72,66,77,80,69}};\r\n",
+      "|  Added variable marks of type int[][] with initial value [[I@f6c48ac\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
-    "int marks[][]={{50,60,55,67,70},{62,65,70,70,81},{72,66,77,80,69}};"
+    "int[][] marks={{50,60,55,67,70},{62,65,70,70,81},{72,66,77,80,69}};"
    ]
   },
   {
@@ -987,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -999,17 +998,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " for(int[] mArr:marks)\r\n",
-      "     for(int m:mArr)\r\n",
+      " for(int[] mArr:marks) {             //각 행을 반복\r\n",
+      "     System.out.printf(\"\\n행 출력: \");\r\n",
+      "     for(int m:mArr)                 //열을 반복\r\n",
       "         System.out.printf(\"%d \",m);\r\n",
-      "50 60 55 67 70 62 65 70 70 81 72 66 77 80 69 \r\n"
+      " \r\n",
+      " }\r\n",
+      "\r\n",
+      "행 출력: 50 60 55 67 70 \r\n",
+      "행 출력: 62 65 70 70 81 \r\n",
+      "행 출력: 72 66 77 80 69 \r\n"
      ]
     }
    ],
    "source": [
-    "for(int[] mArr:marks)\n",
-    "    for(int m:mArr)\n",
-    "        System.out.printf(\"%d \",m);"
+    "for(int[] mArr:marks) {             //각 행을 반복\n",
+    "    System.out.printf(\"\\n행 출력: \");\n",
+    "    for(int m:mArr)                 //열을 반복\n",
+    "        System.out.printf(\"%d \",m);\n",
+    "\n",
+    "}"
    ]
   },
   {
@@ -1040,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -1054,22 +1062,22 @@
      "text": [
       " String[] names={\"동경국제공항\", \"베이징국제공항\",\"런던히드로공항\",\"시드니공항\",\"존.F.케네디\", \"조모케냐타국제공항\"} \r",
       ";\r\n",
-      "|  Added variable names of type String[] with initial value [Ljava.lang.String;@f6c48ac\r\n",
+      "|  Added variable names of type String[] with initial value [Ljava.lang.String;@1e397ed7\r\n",
       "\r\n",
-      " int[] marks={13,6,5,18,17,17};\r\n",
-      "|  Added variable marks of type int[] with initial value [I@598067a5\r\n",
+      " int[] temp={13,6,5,18,17,17};\r\n",
+      "|  Added variable temp of type int[] with initial value [I@56ac3a89\r\n",
       "\r\n"
      ]
     }
    ],
    "source": [
     "String[] names={\"동경국제공항\", \"베이징국제공항\",\"런던히드로공항\",\"시드니공항\",\"존.F.케네디\", \"조모케냐타국제공항\"};\n",
-    "int[] marks={13,6,5,18,17,17};\n"
+    "int[] temp={13,6,5,18,17,17};\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1080,8 +1088,8 @@
      "output_type": "stream",
      "text": [
       " for(int i=0;i<names.length;i++)\r\n",
-      "     System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],marks[i])\r\n",
-      "공항:my\t온도:13\r\n",
+      "     System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],temp[i])\r\n",
+      "공항:동경국제공항\t온도:13\r\n",
       "공항:베이징국제공항\t온도:6\r\n",
       "공항:런던히드로공항\t온도:5\r\n",
       "공항:시드니공항\t온도:18\r\n",
@@ -1093,7 +1101,7 @@
    ],
    "source": [
     "for(int i=0;i<names.length;i++)\n",
-    "    System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],marks[i])"
+    "    System.out.printf(\"공항:%s\\t온도:%d\\n\",names[i],temp[i])"
    ]
   },
   {
@@ -1118,7 +1126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -1149,8 +1157,7 @@
       "         return sb;\r\n",
       "     }\r\n",
       " }\r\n",
-      "|  Replaced class SentenceBuilder\r\n",
-      "|    Update overwrote class SentenceBuilder\r\n",
+      "|  Added class SentenceBuilder\r\n",
       "\r\n"
      ]
     }
@@ -1178,10 +1185,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
-    "scrolled": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -1192,11 +1198,12 @@
      "output_type": "stream",
      "text": [
       " SentenceBuilder sb=new SentenceBuilder();\r\n",
-      "|  Modified variable sb of type SentenceBuilder with initial value SentenceBuilder@42dafa95\r\n",
-      "|    Update overwrote variable sb\r\n",
+      "|  Added variable sb of type SentenceBuilder with initial value SentenceBuilder@cb644e\r\n",
+      "|    Update modified class SentenceBuilder\r\n",
+      "|    Update modified class SentenceBuilderMain\r\n",
       "\r\n",
       " System.out.println(sb.build());\r\n",
-      "I love a football\r\n",
+      "A friend of mine play a football\r\n",
       "\r\n"
      ]
     }
@@ -1204,6 +1211,30 @@
    "source": [
     "SentenceBuilder sb=new SentenceBuilder();\n",
     "System.out.println(sb.build());"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### 클래스의 메인함수를 별도로 만들어 본다.\n",
+    "\n",
+    "main()함수는 테스트 용도로 클래스에 포함하여 만들기도 하지만, 분리할 수도 있다.\n",
+    "\n",
+    "```java\n",
+    "class SentenceBuilderMain {\n",
+    "    public static void main(String[] args) {\n",
+    "        SentenceBuilder sb=new SentenceBuilder();\n",
+    "        System.out.println(sb.build());       \n",
+    "    }\n",
+    "}\n",
+    "```"
    ]
   },
   {
