--- a/j_4_methods.ipynb
+++ b/j_4_methods.ipynb
@@ -1517,12 +1517,15 @@
    "source": [
     "### CALL BY VALUE\n",
     "\n",
-    "함수에서 변수의 값을 변경한다 하더라도 그 범위는 함수 지역에 국한된다.\n",
+    "함수에 변수를 값으로, by value, 전달할 때, **복사본이 전달**되어 함수에서 변수의 값을 변경한다 하더라도 그 범위는 함수 지역에 국한된다.\n",
+    "**원래의 변수는 변경되지 않고 보존**된다.\n",
+    "원시타잎은 값만 저장하므로, 그 값이 전달된다.\n",
+    "단 클래스 또는 배열은 참조 타잎, reference type이라 **참조 값**, 영어로 표현하면 조금 더 명확할 수 있는데 **the value of the reference**이 전달된다. reference란 앞서 설명한 것처럼 실제 값이 저장되어 있는 메모리 영역을 가리키는 주소 값이다. 마찬가지로 복사본이 전달된다.\n",
     "\n",
     "구분 | 설명\n",
     "-----|-----\n",
-    "원시타잎 | 실제 값이 전달된다.\n",
-    "클래스 | **참조 값, 즉 value of the reference to the object**이 전달된다."
+    "원시타잎 | 실제 **값**이 전달된다.\n",
+    "클래스 또는 배열 | **참조의 값, 즉 value of the reference to the object**이 전달된다. 자바에서 객체는 reference로 사용하지만, 함수에는 그 참조 값value of reference가 전달된다. 보통 다른 언어에서 구현하는 swap()은 가능하지 않다."
    ]
   },
   {
@@ -1533,6 +1536,8 @@
     }
    },
    "source": [
+    "#### 원시타잎 call by value\n",
+    "\n",
     "원시타잎 int은 **실제 값**이 전달된다. a=1이 전달되어 함수 내에서 123으로 변경하지만, 그 **범위는 함수 지역에 국한**된다."
    ]
   },
@@ -1583,6 +1588,8 @@
     }
    },
    "source": [
+    "#### 객체의 pass by value\n",
+    "\n",
     "클래스 Integer a=1는 참조 값 (HashCode Before: 1501587365)\n",
     "함수내에서는 a=123을 하면 객체가 새로 생성되고, **새로운 참조 값 (HashCode After: 1596000437)이 할당**된다.\n",
     "따라서 **123으로 값을 변경해도 그 범위는 함수지역에 국한**된다."
@@ -1644,6 +1651,162 @@
     "Integer i=1;\n",
     "changeVar(i);\n",
     "System.out.printf(\"After calling changeVar: %d\",i);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "**배열** 역시 복사본이 전달되고, 그 참조 값이 가리키는 실제 값을 함수에서 변경하게 되므로 그 효과가 함수 밖에서도 지속된다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " void changeArr(Integer[] n, int i) {\r\n",
+      "     n[0]=i;                       //첫 요소를 입력 값으로 변경\r\n",
+      " }\r\n",
+      "|  Modified method changeArr(Integer[],int)\r\n",
+      "|    Update overwrote method changeArr(Integer[],int)\r\n",
+      "\r\n",
+      " \r\n",
+      "\r\n",
+      " Integer[] x={1,2,3,4,5};\r\n",
+      "|  Modified variable x of type Integer[] with initial value [Ljava.lang.Integer;@6fd02e5\r\n",
+      "|    Update overwrote variable x\r\n",
+      "\r\n",
+      " changeArr(x,1111);                //첫 요소를 1111로 변경\r\n",
+      "\r\n",
+      " for(Integer i:x)\r\n",
+      "     System.out.printf(\"%d..\",i);  //함수 밖에서도 변경된 데이터 유지\r\n",
+      "1111..2..3..4..5..\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "void changeArr(Integer[] n, int i) {\n",
+    "    n[0]=i;                       //첫 요소를 입력 값으로 변경\n",
+    "}\n",
+    "\n",
+    "Integer[] x={1,2,3,4,5};\n",
+    "changeArr(x,1111);                //첫 요소를 1111로 변경\n",
+    "for(Integer i:x)\n",
+    "    System.out.printf(\"%d..\",i);  //함수 밖에서도 변경된 데이터 유지"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* swap은 안된다.\n",
+    "\n",
+    "swap()함수는 Point p1, p2의 서로 바꾸려고 한다.\n",
+    "그러나 call by value이므로 값의 변경이 국지적이다.\n",
+    "swap()함수의 효과가 함수 밖에서도 유지되려면 **원래 참조reference를 사용하여 변경**을 해야 한다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " import java.awt.Point;\r\n",
+      "\r\n",
+      " \r\n",
+      "\r\n",
+      " void swap(Point p1, Point p2) {\r\n",
+      "     Point temp = p1;\r\n",
+      "     p1 = p2;\r\n",
+      "     p2 = temp;\r\n",
+      "     System.out.printf(\"IN SWAP: p1 %s, p2 %s\", p1.toString(), p2.toString()); \r",
+      "\r\n",
+      " }\r\n",
+      "|  Modified method swap(Point,Point)\r\n",
+      "|    Update overwrote method swap(Point,Point)\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.awt.Point;\n",
+    "\n",
+    "void swap(Point p1, Point p2) {\n",
+    "    Point temp = p1;\n",
+    "    p1 = p2;\n",
+    "    p2 = temp;\n",
+    "    System.out.printf(\"IN SWAP: p1 %s, p2 %s\", p1.toString(), p2.toString());\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Point p1=new Point(10,20);\r\n",
+      "|  Modified variable p1 of type Point with initial value java.awt.Point[x=10,y=20]\r\n",
+      "|    Update overwrote variable p1\r\n",
+      "\r\n",
+      " Point p2=new Point(30,40);\r\n",
+      "|  Modified variable p2 of type Point with initial value java.awt.Point[x=30,y=40]\r\n",
+      "|    Update overwrote variable p2\r\n",
+      "\r\n",
+      " System.out.printf(\"BEFORE swapping: p1:%s p2:%s\", p1.toString(), p2.toString( \r",
+      "));\r\n",
+      "BEFORE swapping: p1:java.awt.Point[x=10,y=20] p2:java.awt.Point[x=30,y=40]|  Expression value is: java.io.PrintStream@6e1567f1\r\n",
+      "|    assigned to temporary variable $19 of type PrintStream\r\n",
+      "\r\n",
+      " swap(p1,p2);\r\n",
+      "IN SWAP: p1 java.awt.Point[x=30,y=40], p2 java.awt.Point[x=10,y=20]\r\n",
+      " System.out.printf(\"AFTER swapping: p1:%s p2:%s\", p1.toString(), p2.toString() \r",
+      ");\r\n",
+      "AFTER swapping: p1:java.awt.Point[x=10,y=20] p2:java.awt.Point[x=30,y=40]|  Expression value is: java.io.PrintStream@6e1567f1\r\n",
+      "|    assigned to temporary variable $21 of type PrintStream\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Point p1=new Point(10,20);\n",
+    "Point p2=new Point(30,40);\n",
+    "System.out.printf(\"BEFORE swapping: p1:%s p2:%s\", p1.toString(), p2.toString());\n",
+    "swap(p1,p2);\n",
+    "System.out.printf(\"AFTER swapping: p1:%s p2:%s\", p1.toString(), p2.toString());"
    ]
   },
   {
