--- a/j_2_classObject.ipynb
+++ b/j_2_classObject.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 2. Class and Objects\n",
     "\n",
-    "Last updated 20180328WEB1730 20180325SUN0830\n",
+    "Last updated 20180521MON1300 20180328WEB1730 20180325SUN0830\n",
     "\n",
     "## 2.1 학습내용\n",
     "\n",
@@ -2660,6 +2660,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 패키지 설치\n",
+    "    * download http://www.aplu.ch/home/download.jsp\n",
+    "    * lib/ 라이브러리 디렉토리에 복사\n",
+    "       \n",
+    "* turtle 사용하기\n",
+    "    * classpath는 jar까지 넣어준다.\n",
+    "    * 패키지를 import한다.\n",
+    "    * 객체 t1을 생성한다.\n",
+    "    * 반복문을 사용하여, turtle 4각형 이동하기"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2726,8 +2745,29 @@
    "source": [
     "### main() 함수 넣기\n",
     "\n",
+    "JVM을 실행할 경우, 클래스에서 처음 찾는 함수는 main()이다.\n",
     "main() 함수를 넣고, 컴파일 해보자.\n",
-    "패키지가 있어서 명령어에 반영한다."
+    "패키지가 있어서 명령어에 반영한다.\n",
+    "\n",
+    "\n",
+    "```java\n",
+    "public class Hello {} {}\n",
+    "    public static void main(String[] args) {\n",
+    "        System.out.println(\"Hello\");\n",
+    "    }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "\n",
+    "요소 | 설명\n",
+    "-----|-----\n",
+    "public | 누구나 사용할 수 있다\n",
+    "static | 객체를 만들지 않고 사용할 수 있다.\n",
+    "void | return이 없다\n",
+    "main | 클래스를 실행할 때 처음 찾는 함수\n",
+    "(String[] args) | arguments\n",
+    "System.out | standard output\n",
+    "; | statment\n"
    ]
   },
   {
@@ -2826,12 +2866,89 @@
     "UML로 그려진 주사위 클래스를 구현한다.\n",
     "아래는 코드 설명이다.\n",
     "roll() 함수는 '주사위 수'를 무작위로 얻어야 하므로, Math.random()함수를 사용한다.\n",
+    "Math.random()은 0.0 and 0.999사이의 수를 '무작위'로 생성한다.\n",
     "Math클래스는 객체를 만들지 않고 바로 사용하고 있다.\n",
     "\n",
     "줄 | 설명\n",
     "-----|-----\n",
     "2 | 주사위 숫자 number이다. 초기화를 0으로 해 놓는다.\n",
     "4 | Math.random()에서 생성된 수 x: 0.0 $\\le x \\lt$ 1.0는 소수이므로 6을 곱해서 정수, 0 ~ 5로 만든다. 그리고 더하기 1을 한다. x에서 소수점을 제거하고 1을 더해야 주사위 수를 만들 수 있다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "for(int i=0;i<10;i++) {\n",
+    "    double random = Math.random();\n",
+    "    System.out.println(random);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* 1 ~ 10사이의 수를 '무작위'로 생성하려면 10을 곱해준다.\n",
+    "    * 0.0~0.999에 10을 곱하면 0.0 ~ 9.99 사이의 수를 생성한다.\n",
+    "    * 10을 포함하려면 1을 더해준다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for(int i=0;i<10;i++) {\n",
+    "    int random = (int )(Math.random() * 10 + 1);\n",
+    "    System.out.println(random);\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "* java.util.Random 패키지의 nextInt()\n",
+    "```java\n",
+    "public int nextInt(int n)\n",
+    "```\n",
+    "    * uniform 분포를 사용하여, 0 (inclusive) ~ n (exclusive)의 값. 1을 더해준다.\n",
+    "    * int를 반환하므로, 형변환을 하지 않는다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import java.util.Random;\n",
+    "Random r = new Random();\n",
+    "for(int i=0;i<10;i++) {\n",
+    "    int random = r.nextInt(10+1);\n",
+    "    System.out.println(random);\n",
+    "}"
    ]
   },
   {
