--- a/j_3_dataTypeOperations.ipynb
+++ b/j_3_dataTypeOperations.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 3. 데이터 타잎과 연산자\n",
     "\n",
-    "Last updated 20180404WED1100 20180309FRI\n",
+    "Last updated 20180521MON1300 20180404WED1100 20180309FRI\n",
     "\n",
     "## 3.1 학습내용\n",
     "\n",
@@ -2523,9 +2523,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2533,12 +2534,12 @@
      "output_type": "stream",
      "text": [
       " long totalMilliseconds = System.currentTimeMillis();\r\n",
-      "|  Added variable totalMilliseconds of type long with initial value 1521970734912\r\n",
+      "|  Added variable totalMilliseconds of type long with initial value 1526875072931\r\n",
       "\r\n",
       " \r\n",
       "\r\n",
       " System.out.println(\"현재시간: \" + new Date(totalMilliseconds));\r\n",
-      "현재시간: Sun Mar 25 18:38:54 KST 2018\r\n",
+      "현재시간: Mon May 21 12:57:52 KST 2018\r\n",
       "\r\n"
      ]
     }
@@ -2547,6 +2548,32 @@
     "long totalMilliseconds = System.currentTimeMillis();\n",
     "\n",
     "System.out.println(\"현재시간: \" + new Date(totalMilliseconds));"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " import java.text.DateFormat;\r\n",
+      "\r\n",
+      " DateFormat.getInstance().format(totalMilliseconds);\r\n",
+      "|  Expression value is: \"5/21/18, 12:57 PM\"\r\n",
+      "|    assigned to temporary variable $4 of type String\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.text.DateFormat;\n",
+    "DateFormat.getInstance().format(totalMilliseconds);"
    ]
   },
   {
@@ -2630,7 +2657,8 @@
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2770,7 +2798,8 @@
    "cell_type": "code",
    "execution_count": 53,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
