--- a/j_5_controlstructure.ipynb
+++ b/j_5_controlstructure.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 5. 제어흐름\n",
     "\n",
-    "Last updated 20180502WED1130 20180318SUN1743\n",
+    "Last updated 20180521MON1300 20180502WED1130 20180318SUN1743\n",
     "\n",
     "## 5.1 학습내용\n",
     "\n",
@@ -6140,6 +6140,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import iplantuml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%%plantuml\n",
+    "@startuml\n",
+    "class java.util.Calendar {\n",
+    "    static getInstance(): Calendar\n",
+    "    get(int field):int\n",
+    "    set(int year, int month, int date, int hourOfDay, int minute, int second):void\n",
+    "}\n",
+    "@enduml"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {
     "collapsed": false,
@@ -6204,7 +6233,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -6232,6 +6262,28 @@
     "c.set(2018, Calendar.APRIL, 16);\n",
     "int day_of_week = c.get(Calendar.DAY_OF_WEEK);\n",
     "System.out.println(\"2018년 4월 16일은 무슨 요일: \"+day_of_week);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Calendar cal = Calendar.getInstance();\n",
+    "int year = cal.get(Calendar.YEAR);\n",
+    "int month = cal.get(Calendar.MONTH);      // 0 to 11\n",
+    "int day = cal.get(Calendar.DAY_OF_MONTH);\n",
+    "int hour = cal.get(Calendar.HOUR_OF_DAY);\n",
+    "int minute = cal.get(Calendar.MINUTE);\n",
+    "int second = cal.get(Calendar.SECOND);\n",
+    "\n",
+    "System.out.printf(\"Now is %4d/%02d/%02d %02d:%02d:%02d\\n\", year, month+1, day, hour, minute, second);\n"
    ]
   },
   {
