--- a/j_1_hello_java.ipynb
+++ b/j_1_hello_java.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# 1. Hello Java\n",
     "\n",
-    "Last updated 20180310SAT 0948\n",
+    "Last updated 20180521MON1230 classpath+javac+java, 20180310SAT0948\n",
     "\n",
     "## 1.1 학습내용\n",
     "\n",
@@ -364,6 +364,21 @@
     }
    },
    "source": [
+    "### java파일 만들기\n",
+    "\n",
+    "* 모든 public class는 하나씩 .java파일로 이름을 지어서 저장한다.\n",
+    "* 클래스명과 파일명은 동일하게 한다.\n",
+    "* 2개의 클래스를 한 파일에 넣을 경우, 파일명과 동일한 클래스만 public으로 정의한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
     "### 코드\n",
     "\n",
     "간단한 \"hello world!\"를 출력하는 프로그램이다.\n",
@@ -390,6 +405,34 @@
     "\n",
     "컴파일은 javac, 실행은 java를 사용한다.\n",
     "\n",
+    "#### 컴파일하기\n",
+    "\n",
+    "* javac: java source code (.java) > java byte code (.class)\n",
+    "```java\n",
+    "$ javac\n",
+    "```\n",
+    "    \n",
+    "* javac -help로 도움말을 볼 수 있다.\n",
+    "```java\n",
+    "$ javac -help\n",
+    "-verbose\n",
+    "-g\n",
+    "-classpath\n",
+    "-sourcepath\n",
+    "-d\n",
+    "```\n",
+    "\n",
+    "* 윈도우에서 java를 저장하고 컴파일하면 \"error: illegal character: '\\ufeff'\"\n",
+    "    * Notepad에서 ANSI 형식으로 저장하면 BOM (Byte Order Mark) 문제\n",
+    "    * javac -encoding \"unicode\"로 컴파일 형식을 unicode로 저장한다.\n",
+    "\n",
+    "#### 실행하기\n",
+    "\n",
+    "* java: JVM runs java byte code (.class)\n",
+    "```java\n",
+    "$ java\n",
+    "```\n",
+    "\n",
     "선택 명령어 | 설명\n",
     "-----|-----\n",
     "-d `<디렉토리>` | 생성된 class 파일을 저장하는 디렉토리\n",
@@ -403,7 +446,40 @@
     "구분 | 윈도우 | 리눅스\n",
     "-----|-----|-----\n",
     "컴파일 | javac -d classes -sourcepath src\\ src\\Hello.java | javac -d classes/ -sourcepath src/ src/Hello.java \n",
-    "실행 | java -cp classes Hello | java -cp classes/ Hello "
+    "실행 | java -cp classes Hello | java -cp classes/ Hello"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### classpath\n",
+    "\n",
+    "* 컴파일할 때, classpath 명시해주거나 환경변수설정하고 생략\n",
+    "    * 리눅스 classpath 설정\n",
+    "```python\n",
+    "$ export CLASSPATH=$CLASSPATH:./classes/\n",
+    "$ echo $CLASSPATH 또는 $ printenv\n",
+    "```\n",
+    "    \n",
+    "    * 윈도우 classpath 설정\n",
+    "        * 현재 명령창에만 환경변수 유지\n",
+    "```python\n",
+    "set classpath=%classpath%;.\\classes;.\n",
+    "echo %classpath%\n",
+    "```\n",
+    "        * 시스템 환경변수를 변경하려면 setx 명령어를 사용한다.\n",
+    "\n",
+    "* .class 파일을 찾는 경로 (우선 순위)\n",
+    "    1.  \\$JAVA\\_HOME/lib\n",
+    "    2.  \\$JAVA\\_HOME/jre/lib/ext\n",
+    "    3.  \\$CLASSPATH\n",
+    "    4.  -classpath\n",
+    "    5.  현재 작업하고 있는 directory"
    ]
   },
   {
