--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -10,8 +10,7 @@
    "source": [
     "# 6. 데이터구조\n",
     "\n",
-    "Last updated 20180512SUN1600 20180329THR1730\n",
-    "데이터구조 4번, 11부터\n",
+    "Last updated 20180522TUE2200 20180512SUN1600 20180329THR1730\n",
     "\n",
     "## 6.1 학습내용\n",
     "\n",
@@ -2104,7 +2103,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -2112,23 +2110,42 @@
    "source": [
     "### iterator\n",
     "\n",
-    "데이터구조는 대량 데이터를 가지고 있기 때문에, 각 요소를 출력할 경우 iterator를 사용할 수 있다. iterator는:\n",
+    "앞서 Array, ArrayList에 저장된 데이터를 반복문으로 읽어올 경우, **명령문에 차이가 있어 불편함**이 있었다.\n",
+    "예를 들어 데이터 갯수는 length 또는 size()를 사용하고,\n",
+    "다음 데이터를 가져오는 방식도 인덱스를 직접 사용하거나 또는 get()함수를 사용했다.\n",
+    "iterator를 사용하면 이러한 **차이를 통일**할 수 있다.\n",
     "\n",
-    "기능구분 | 함수\n",
+    "구분 | iterator | Array | ArrayList\n",
+    "-----|-----|-----|-----\n",
+    "데이터 갯수 | hasNext() | length | size()\n",
+    "다음 데이터 가져오기 | next() | [인덱스] | get(인덱스)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "iterator를 사용하면 hasNext(), next() 함수를 사용해서 반복문을 만든다.\n",
+    "\n",
+    "함수 | 설명\n",
     "-----|-----\n",
-    "다음 데이터가 존재하는지 확인 | hasNext()\n",
-    "다음 데이터를 가져오기 | next() 이 함수는 Object를 반환한다. 캐스팅을 해야 한다.\n",
-    "\n",
-    "```java\n",
-    "E next()\n",
-    "```"
+    "hasNext() | 다음 데이터가 존재하는지 확인, ```boolean hasNext()```\n",
+    "next() | 다음 데이터를 가져오기, ```E next()``` 이 함수는 Object를 반환하므로, 캐스팅을 해야 한다."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 36,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -2983,10 +3000,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![alt text](figures/6_referenceProblem.png \"Reference Problem\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
    },
    "outputs": [
     {
@@ -4122,12 +4153,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "정수배열 x를 y에 복사하면 **y에는 x의 참조값이 저장**된다.\n",
+    "따라서 x가 가리키는 정수배열의 값이 변경되면, y도 당연히 변경된다.\n",
+    "y에는 x의 참조값이 저장되어 있고 **동일한 정수배열을 보고** 있기 때문이다.\n",
+    "\n",
+    "![alt text](figures/6_deepCopy.png \"Shallow and Deep Copy\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "subslide"
     }
    },
    "outputs": [
