--- a/j_6_datastructure.ipynb
+++ b/j_6_datastructure.ipynb
@@ -3646,7 +3646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -3992,12 +3992,14 @@
     }
    },
    "source": [
-    "남녀별 합계를 계산해 보자."
+    "남녀별 합계를 계산해 보자. 합계는 남녀 별도로 계산한다.\n",
+    "배열에서 데이터를 꺼내는 것이 조금 어렵고, 계산식은 단순하다.\n",
+    "다음으로는 ```int[] getSumbyMF()```로 만들어 보자."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -4018,8 +4020,8 @@
       " }\r\n",
       "\r\n",
       " System.out.printf(\"sumM:%d, sumF:%d\",sumM,sumF);\r\n",
-      "sumM:4873499, sumF:5033671|  Expression value is: java.io.PrintStream@73ad2d6\r\n",
-      "|    assigned to temporary variable $9 of type PrintStream\r\n",
+      "sumM:4873499, sumF:5033671|  Expression value is: java.io.PrintStream@59ec2012\r\n",
+      "|    assigned to temporary variable $5 of type PrintStream\r\n",
       "\r\n"
      ]
     }
@@ -4032,6 +4034,85 @@
     "    sumF+=gu[1];\n",
     "}\n",
     "System.out.printf(\"sumM:%d, sumF:%d\",sumM,sumF);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " int[] getSumbyMF() {\r\n",
+      "     int[] sumMF={0,0};\r\n",
+      "     for(int[] gu:data) {\r\n",
+      "         sumMF[0]+=gu[0];\r\n",
+      "         sumMF[1]+=gu[1];\r\n",
+      "     }\r\n",
+      "     System.out.printf(\"sumM:%d, sumF:%d\",sumM,sumF);\r\n",
+      "     return sumMF;\r\n",
+      " }\r\n",
+      "|  Added method getSumbyMF()\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] getSumbyMF() {\n",
+    "    int[] sumMF={0,0};\n",
+    "    for(int[] gu:data) {\n",
+    "        sumMF[0]+=gu[0];\n",
+    "        sumMF[1]+=gu[1];\n",
+    "    }\n",
+    "    System.out.printf(\"sumM:%d, sumF:%d\",sumM,sumF);\n",
+    "    return sumMF;\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " int[] sumMF=getSumbyMF();\r\n",
+      "sumM:4873499, sumF:5033671|  Modified variable sumMF of type int[] with initial value [I@6fd02e5\r\n",
+      "|    Update overwrote variable sumMF\r\n",
+      "\r\n",
+      " System.out.printf(\"sumM:%d sumF:%d\",sumMF[0],sumMF[1]);\r\n",
+      "sumM:4873499 sumF:5033671|  Expression value is: java.io.PrintStream@59ec2012\r\n",
+      "|    assigned to temporary variable $13 of type PrintStream\r\n",
+      "\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "int[] sumMF=getSumbyMF();\n",
+    "System.out.printf(\"sumM:%d sumF:%d\",sumMF[0],sumMF[1]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  클래스 만들기\n",
+    "\n",
+    "int[] getSumbyMF()"
    ]
   },
   {
