--- a/j_8_inheritancepolymorphism.ipynb
+++ b/j_8_inheritancepolymorphism.ipynb
@@ -3434,12 +3434,8 @@
     "protected Object clone()\n",
     "```\n",
     "\n",
-    "그러나 clone() 함수는 호출하면 예외가 발생한다.\n",
-    "\n",
-    "외부에서는 clone()을 사용하지 못함 (? object라서 어차피 상속?)\n",
-    "override할 경우에는 public Object clone()으로\n",
-    "\n",
-    "자바는 **Cloneable 인터페이스**를 구현해서 객체를 복사한다."
+    "그러나 **clone() 함수를 직접 호출하면 예외**가 발생한다.\n",
+    "**클래스 Object에서 상속받는 함수이지만** 반드시 자바는 **Cloneable 인터페이스를 구현**해서 객체를 복사한다."
    ]
   },
   {
