--- a/j_8_inheritancepolymorphism.ipynb
+++ b/j_8_inheritancepolymorphism.ipynb
@@ -3140,70 +3140,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " interface IShape {\r\n",
-      "     public double calcArea();\r\n",
-      "     public double calcPerimeter();\r\n",
-      " }\r\n",
-      "|  Added interface IShape\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# %load src/IShape.java\n",
     "interface IShape {\n",
     "    public double calcArea();\n",
     "    public double calcPerimeter();\n",
-    "}"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " class Rectangle implements IShape {\r\n",
-      "   private final double width, height;\r\n",
-      "   public Rectangle(double width, double height) {\r\n",
-      "     this.width = width;\r\n",
-      "     this.height= height;\r\n",
-      "   }\r\n",
-      "   @Override\r\n",
-      "   public double calcArea() {\r\n",
-      "     return width * height;\r\n",
-      "   }\r\n",
-      " \r\n",
-      "   @Override\r\n",
-      "   public double calcPerimeter() {\r\n",
-      "     return 2 * (width + height);\r\n",
-      "   }\r\n",
-      " }\r\n",
-      "|  Added class Rectangle\r\n",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# %load src/Rectangle.java\n",
     "class Rectangle implements IShape {\n",
     "  private final double width, height;\n",
     "  public Rectangle(double width, double height) {\n",
@@ -3219,7 +3183,54 @@
     "  public double calcPerimeter() {\n",
     "    return 2 * (width + height);\n",
     "  }\n",
-    "}"
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "인터페이스 및 자바 파일은 하나씩 파일명과 동일하게 저장하여 컴파일한다.\n",
+    "RectangleMain에서 인터페이스 IShape, 클래스 Rectangle을 사용하게 된다.\n",
+    "\n",
+    "컴파일 및 실행 | 명령어\n",
+    "-----|-----\n",
+    "interface 컴파일 | javac -d classes/ -sourcepath src/ src/IShape.java \n",
+    "Rectangle 컴파일 | javac -d classes/ -sourcepath src/ src/Rectangle.java \n",
+    "RectangleMain 컴파일 | javac -d classes/ -sourcepath src/ src/RectangleMain.java \n",
+    "RectangleMain 실행 | java -cp classes/ RectangleMain\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load src/RectangleMain.java\n",
+    "class RectangleMain {\n",
+    "    public static void main(String[] args) {\n",
+    "        Rectangle r=new Rectangle(10.,20.);\n",
+    "        System.out.println(r.calcArea());\n",
+    "    }\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "물론 jshell에서도 불러 사용할 수 있다."
    ]
   },
   {
@@ -3228,7 +3239,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "-"
     }
    },
    "outputs": [
@@ -6690,14 +6701,21 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Java 9",
-   "language": "java",
-   "name": "java"
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
   },
   "language_info": {
-   "file_extension": ".class",
-   "mimetype": "application/java-vm",
-   "name": "java"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
